argocd/snutt-prod/snutt-timetable/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snutt-timetable
  labels:
    app: snutt-timetable
spec:
  # replicas: HPA
  selector:
    matchLabels:
      app: snutt-timetable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: snutt-timetable
    spec:
      serviceAccountName: snutt-timetable
      nodeSelector:
        kubernetes.io/arch: arm64
        phase: prod
      tolerations:
        - effect: NoSchedule
          key: phase
          operator: Equal
          value: prod
      volumes:
        - name: oci-api-key
          secret:
            secretName: oci-api-key
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/snutt-prod/snutt-timetable:1
          name: snutt-timetable
          volumeMounts:
            - name: oci-api-key
              mountPath: /root/.oci
              readOnly: true
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 512Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: snutt-timetable
spec:
  type: ClusterIP
  selector:
    app: snutt-timetable
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: snutt-timetable
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - snutt-api.wafflestudio.com
  http:
    - name: "snutt-timetable-route"
      timeout: 10s
      route:
        - destination:
            host: snutt-timetable
      corsPolicy:
        allowHeaders:
          - content-type
          - x-access-apikey
          - x-access-token
          - x-app-version
          - x-app-type
          - x-os-type
          - x-os-version
          - x-device-id
          - x-device-model
        allowMethods:
          - POST
          - GET
          - PUT
          - PATCH
          - DELETE
          - OPTIONS
        allowOrigins:
          - exact: "https://snutt.wafflestudio.com"
          - exact: "https://snutt-admin.wafflestudio.com"
          - exact: "https://snutt-ev-web.wafflestudio.com"
          - exact: "https://snutt-theme-market.wafflestudio.com"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: snutt-timetable
spec:
  host: snutt-timetable
  trafficPolicy:
    connectionPool:
      http:
        maxRequestsPerConnection: 100
        idleTimeout: 30s
